--- a/src/test/resources/it-test.properties
+++ b/src/test/resources/it-test.properties
@@ -2,3 +2,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url = jdbc:h2:mem:test
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.sql.init.mode = never
+kafka.notification.topic.name = creditor_notification
