--- a/src/test/resources/it-test.properties
+++ b/src/test/resources/it-test.properties
@@ -1,5 +1,6 @@
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url = jdbc:h2:mem:test
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = create
 spring.sql.init.mode = never
 kafka.notification.topic.name = creditor_notification
