--- a/src/test/resources/it-test.properties
+++ b/src/test/resources/it-test.properties
@@ -4,3 +4,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto = create
 spring.sql.init.mode = never
 kafka.notification.topic.name = creditor_notification
+
+resilience4j.ratelimiter.instances.instantPaymentRateLimiter.limit-for-period=10
+resilience4j.ratelimiter.instances.instantPaymentRateLimiter.limit-refresh-period=30s
